chore: fix my skills css to wrap

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,7 @@
 	flex-direction: row;
 	align-items: flex-start;
 	columns: 3;
+	flex-wrap: wrap;
 }
 
 .myskills > div {
